--- a/src/styles.css
+++ b/src/styles.css
@@ -2,15 +2,87 @@ body {
   font-family: "Poppins", sans-serif;
 }
 
+
+
 header {
+    background-image: linear-gradient(rgba(0, 0, 0, 0.4), rgba(0, 0, 0, 0.4)),
+    url("https://www.sunnylyn.co.uk/content/S638115549095828487/main_638124867224684679_main_636523879629702748_Woolacombe-Bay-banner.jpg");
+    background-repeat: no-repeat;
+    background-size: cover;
+    color: white;
+    max-width: 1200px;
+    padding: 50px;
+    display: block;
+    margin: 0 auto;
+    height: 580px;
+}
+
+header h3 {
   text-align: center;
+  padding-top: 60px;
 }
 
-h1 {
+header h1 {
   font-size: 96px;
+  text-align: center;
+  line-height: 1.2;
+  margin: 0;
+  padding: 18px 0 0 0;
 }
 
-h2 {
+header h2 {
   font-size: 40px;
   font-weight: 400;
+  text-align: center;
+  line-height: 1.2;
+  margin: 0;
+  padding: 32px 0 0 0;
 }
+
+header a {
+    background-color: white;
+    padding: 15px 5px;
+    border-radius: 10px;
+    text-decoration: none;
+    color: black;
+    transition: all 250ms ease-in-out;
+    display: block;
+    margin: 0 auto;
+    text-align: center;
+    width: 100px;
+    text-transform: uppercase;
+    margin-top: 55px; 
+    letter-spacing: 1px;
+}
+
+header a:hover {
+    opacity: 0.7;
+    letter-spacing: 1.5px;
+}
+
+footer {
+  text-align: center;
+  padding-top: 15px;
+}
+
+
+@media (max-width: 900px){
+    header {
+        padding: 60px 0;
+    }
+    header h3 {
+        font-size: 30px;
+    }
+    header h1 {
+        font-size: 48px;
+    }
+    header h2 {
+        font-size: 24px;
+    }
+    header a {
+        font-size: 18px;
+        padding: 15px 10px;
+    }
+
+}
+
