--- a/src/styles.css
+++ b/src/styles.css
@@ -2,24 +2,23 @@ body {
   font-family: "Poppins", sans-serif;
 }
 
-
-
 header {
-    background-image: linear-gradient(rgba(0, 0, 0, 0.4), rgba(0, 0, 0, 0.4)),
+  background-image: linear-gradient(rgba(0, 0, 0, 0.4), rgba(0, 0, 0, 0.4)),
     url("https://www.sunnylyn.co.uk/content/S638115549095828487/main_638124867224684679_main_636523879629702748_Woolacombe-Bay-banner.jpg");
-    background-repeat: no-repeat;
-    background-size: cover;
-    color: white;
-    max-width: 1200px;
-    padding: 50px;
-    display: block;
-    margin: 0 auto;
-    height: 580px;
+  background-repeat: no-repeat;
+  background-size: cover;
+  color: white;
+  max-width: 1200px;
+  padding: 50px;
+  display: block;
+  margin: 0 auto;
+  height: 580px;
 }
 
 header h3 {
   text-align: center;
   padding-top: 60px;
+  margin: 0;
 }
 
 header h1 {
@@ -40,49 +39,105 @@ header h2 {
 }
 
 header a {
-    background-color: white;
-    padding: 15px 5px;
-    border-radius: 10px;
-    text-decoration: none;
-    color: black;
-    transition: all 250ms ease-in-out;
-    display: block;
-    margin: 0 auto;
-    text-align: center;
-    width: 100px;
-    text-transform: uppercase;
-    margin-top: 55px; 
-    letter-spacing: 1px;
+  background-color: white;
+  padding: 15px 5px;
+  border-radius: 10px;
+  text-decoration: none;
+  color: black;
+  transition: all 250ms ease-in-out;
+  display: block;
+  margin: 0 auto;
+  text-align: center;
+  width: 100px;
+  text-transform: uppercase;
+  margin-top: 55px;
+  letter-spacing: 1px;
 }
 
 header a:hover {
-    opacity: 0.7;
-    letter-spacing: 1.5px;
+  opacity: 0.7;
+  letter-spacing: 1.5px;
 }
 
 footer {
-  text-align: center;
-  padding-top: 15px;
+  background-image: linear-gradient(
+      rgba(39, 32, 68, 0.8),
+      rgba(39, 32, 68, 0.8)
+    ),
+    url("../images/ilfracombe.jpg");
+  background-repeat: none;
+  background-size: cover;
+  color: white;
+  /* height: 334px; */
+  /* text-align: center; */
+  /* padding-top: 15px; */
+}
+
+footer .grid {
+  padding: 100px 171px 100px 171px;
+  display: grid;
+  grid-template-columns: 1fr 1fr 1fr;
+}
+
+footer .footer-box {
+  padding: 0 30px 0 30px;
+}
+footer h4 {
+  font-weight: bold;
+  font-size: 20px;
+}
+
+footer p {
+  line-height: 1.5;
+  font-weight: 300;
+  font-size: 16px;
+  margin: 0;
+}
+
+footer ul {
+  /* margin: 0; */
+  padding: 0;
+}
+
+footer li {
+  list-style: none;
+  font-weight: 300;
+  line-height: 2;
+  font-size: 16px;
+  color: white;
+}
+
+footer a {
+  text-decoration: none;
+  color: white;
+}
+
+footer .social-link{
+  color: #00a6ed;
+  text-decoration: none;
+  transition: all 100ms ease-in-out;
 }
 
 
-@media (max-width: 900px){
-    header {
-        padding: 60px 0;
-    }
-    header h3 {
-        font-size: 30px;
-    }
-    header h1 {
-        font-size: 48px;
-    }
-    header h2 {
-        font-size: 24px;
-    }
-    header a {
-        font-size: 18px;
-        padding: 15px 10px;
-    }
-
+footer a:hover {
+  opacity: 0.7;
 }
 
+@media (max-width: 900px) {
+  header {
+    padding: 60px 0;
+  }
+  header h3 {
+    font-size: 30px;
+  }
+  header h1 {
+    font-size: 48px;
+  }
+  header h2 {
+    font-size: 24px;
+  }
+  header a {
+    font-size: 18px;
+    padding: 15px 10px;
+  }
+}
