--- a/src/styles.css
+++ b/src/styles.css
@@ -92,18 +92,20 @@ opacity: 0.3;
 
 .row {
 margin:0;
-padding:100px 0 100px 0;
+padding: 50px 100px 50px 100px;
 background-color: white;
 }
 
 main img {
   max-width: 100%;
-  padding: 18px;
+  padding: 0px;
 }
 
 .col-6, .col {
-  padding: 0 30px;
+  /* padding: 0 30px; */
 }
+
+
 
 main h2 {
   color: #272044;
