--- a/src/styles.css
+++ b/src/styles.css
@@ -128,6 +128,7 @@ main p {
   justify-content: center;
   place-items: center;
   max-width: 100%;
+  padding: auto 24px;
 }
 
 section {
@@ -140,7 +141,7 @@ section {
   border: none;
   width: 300px;
   max-width: 100%;
-  margin: 40px
+  margin: 30px
 }
 
 .card-image{
