--- a/src/styles.css
+++ b/src/styles.css
@@ -128,6 +128,7 @@ main p {
   justify-content: center;
   place-items: center;
   width: 100%;
+  column-gap: 60px;
   /* padding: auto 24px; */
 }
 
@@ -150,13 +151,17 @@ section {
 }
 
 .card-images img {
-  height: 95%;
+  height: 95.46%;
   margin: 0;
 }
 
 .embed {
   width: 100%;
   aspect-ratio: 1/1;
+}
+
+.card-body {
+  padding: auto 10px;
 }
 
 .attractions-header {
@@ -295,6 +300,7 @@ footer a:hover {
   }
   .card {
     width: 75%;
+    margin-bottom:24px;
   }
   .cards-flex {
     display:grid;
